  places quotes around each value.  This format is compatible with data dumps
  from previous versions of PyFITS, but not vice-versa due to a parsing bug in
  older versions.


3.0.1 (unreleased)
--------------------

- Fixed a bug where updating a header card comment could cause the value to be
  lost if it had not already been read from the card image string.


3.0.0 (2011-08-23)
--------------------

- Contains major changes, bumping the version to 3.0

- Large amounts of refactoring and reorganization of the code; tried to
  preserve public API backwards-compatibility with older versions (private API
  has many changes and is not guaranteed to be backwards-compatible).  There
  are a few small public API changes to be aware of:

  * The pyfits.rec module has been removed completely.  If your version of
    numpy does not have the numpy.core.records module it is too old to be used
    with PyFITS.

  * The `Header.ascardlist()` method is deprecated--use the `.ascard`
    attribute instead.

  * `Card` instances have a new `.cardimage` attribute that should be used
    rather than `.ascardimage()`, which may become deprecated.

  * The `Card.fromstring()` method is now a classmethod.  It returns a new
    `Card` instance rather than modifying an existing instance.

  * The `req_cards()` method on HDU instances has changed:  The `pos` argument
    is not longer a string.  It is either an integer value (meaning the card's
    position must match that value) or it can be a function that takes the
    card's position as it's argument, and returns True if the position is
    valid.  Likewise, the `test` argument no longer takes a string, but instead
    a function that validates the card's value and returns True or False.

  * The `get_coldefs()` method of table HDUs is deprecated.  Use the `.columns`
    attribute instead.

  * The `ColDefs.data` attribute is deprecated--use `ColDefs.columns` instead