@@ -18,6 +18,10 @@ Changelog
 - Fixed a bug where updating a header card comment could cause the value to be
   lost if it had not already been read from the card image string.
 
+- Fixed a related bug where changes made directly to Card object in a header
+  (i.e. assigning directly to card.value or card.comment) would not propagate
+  when flushing changes to the file (#69)
+
 
 3.0.0 (2011-08-23)
 --------------------
